[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "bigpy"
license = "LicenseRef-WTFPL"
license-files = ["LICENSE"]
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Harper Reed" }
]
dependencies = [
    "markdown2>=2.5.1",
    "python-slugify>=8.0.4",
    "requests>=2.32.3",
]
